made miiddle of header look nice

--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
 
 <body class="removemargin container">
     <header class="container centerall headerstyle">
-        <nav>
-            <ul class="whitetext">
-                <li>Collections</li>
-                <li>Showroom</li>
-                <li>Professionals</li>
-                <li>News</li>
-                <li>About us</li>
-                <li>
-                    <p><span class="material-icons">search</span> </p>
-                </li>
-            </ul>
-        </nav>
+        <div>
+            <nav></nav>
+            <nav>
+                <ul class="whitetext flex-ul">
+                    <li class="inline-li"> Collections</li>
+                    <li class="inline-li">Showroom</li>
+                    <li class="inline-li">Professionals</li>
+                    <li class="inline-li">News</li>
+                    <li class="inline-li">About us</li>
+                    <li class="inline-li">
+                        <p><span class="material-icons">search</span> </p>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main></main>
 </body>
