--- a/index.html
+++ b/index.html
@@ -11,20 +11,39 @@
 
 <body class="removemargin container">
     <header class="container centerall headerstyle">
-        <div>
-            <nav></nav>
-            <nav>
-                <ul class="whitetext flex-ul">
-                    <li class="inline-li"> Collections</li>
-                    <li class="inline-li">Showroom</li>
-                    <li class="inline-li">Professionals</li>
-                    <li class="inline-li">News</li>
-                    <li class="inline-li">About us</li>
-                    <li class="inline-li">
-                        <p><span class="material-icons">search</span> </p>
-                    </li>
-                </ul>
-            </nav>
+        <div class="space-text">
+            <div>
+                <nav>
+                    <!-- bild in här -->
+                </nav>
+            </div>
+            <div>
+                <nav>
+                    <ul class="whitetext flex-ul">
+                        <li class="inline-li"><a> Collections</a></li>
+                        <li class="inline-li"><a>Showroom</a></li>
+                        <li class="inline-li"><a>Professionals</a></li>
+                        <li class="inline-li"><a>News</a></li>
+                        <li class="inline-li"><a>About us</a></li>
+                        <li class="inline-li">
+                            <p>
+                                <a><span class="material-icons">search</span> </a>
+                            </p>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div>
+                <nav>
+                    <ul class="whitetext flex-ul">
+                        <li class="inline-li">My account</li>
+                        <li class="inline-li">
+                            <p><span class="material-icons">shopping_bag</span></p>
+                        </li>
+                        <li class="inline-li">en</li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
     <main></main>
